--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,9 @@
   <string name="select_placemark_image">Select placemark image</string>
   <string name="change_placemark_image">Change placemark image</string>
   <string name="button_location">Set Location</string>
-  <string name="title_activity_maps">Map</string>
   <string name="menu_deletePlacemark">Delete</string>
   <string name="title_activity_placemark_maps">Map of all Placemarks</string>
-
+  <string name="title_activity_placemark_list">Placemarks</string>
+  <string name="title_activity_placemark">Placemark</string>
+  <string name="title_activity_edit_location">Placemark</string>
 </resources>
